[package]
name = "untouchable-logic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsa = { version = "0.9.6" }
rand = "0.8.5"
serde = { version ="1.0", features = ["derive"] }
serde_json = "1.0.114"
base64 = "*"